# rdk-appmanager

js_files/: rdkmediaplayer.js  startup_partnerapp.js
lxc-container/: appmanager-lxc.service  appmanager.conf  deviceInfo.js  pxscene-start.sh  startup.js
nappmgr/: CMakeLists.txt  NativeAppManager.cpp  NativeAppManager.h  nappmgr.cpp  uihandler.cpp  uihandler.h
nappmgr/helpers/: serviceconnector.cpp  serviceconnector.h
residentapp/: residentApp.sh
resources/systemd/: appmanager.service
scripts/: runAppManager.sh
